# waifu-api

./: .env.example  .gcloudignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  app.js  config copy.json  config.example.js  config.example.json  config.example.yml  docker-compose.yml  go.mod  go.sum  main.go  package.json  router.js  schema.sql
.github/workflows/: docker-image.yml  go.yml
api/: api.go  common.go  errors.go  upload.js
api/admin/: listfile.js  verify.js
api/middleware/: auth.go  ratelimit.go
api/router/: router.go
app/: front.go  router.go
app/API/: admin.go  api.go  common.go  endpoints.go  getImage.go  image.go  login.go  upload.go
app/Views/: views.go
app/auth/: auth.go
cmd/admin/: admin.go
config/: config.go
database/: db.go
lib/: isAdmin.js  mongo.js
promo/: banner.psd
public/css/: docs.css  grid.css  main.css  upload.css
public/scripts/: adminlogin.js  grid.js  upload.js
public/templates/: 404.html  docs.html  grid.html  pages.html  upload.html
src/: config.rs  go.mod  go.sum  main.go  main.rs  responses.rs
src/api/: api.go  common.go
src/app/: router.go
src/client/: .gitignore  README.md  package.json  vue.config.js
src/database/: type.go
src/server/: go.mod  go.sum  main.go
src/static/: static.go
util/: config.go  crypto.go  db.go  middleware.go  s3.go  web.go
util/admin/: create.go
util/config/: config.go
util/crypto/: argon.go  uuid.go  (+1 more)
views/: 404.ejs  docs.ejs  grid.ejs  index.ejs  nsfw.ejs  sfw.ejs  upload.ejs
web/: .env  .eslintrc.js  config.js  package.json  webpack.config.js
(+140 files in other folders)
