[package]
name = "waifu-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
log = "0.4"
env_logger = "0.9.0"
dotenv = "0.15.0"
thiserror = "1.0"
anyhow = { version = "1.0", features = ["backtrace"] }
derive_more = "0.99.17"
sentry = "0.25.0"
sentry-anyhow = "0.25.0"
sentry-actix = "0.25.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.136", features = ["derive"] }
rusoto_s3 = "0.47.0"
rusoto_core = "0.47.0"
colored = "2.0.0"